--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-loading-skeleton": "^3.3.1",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "react-tooltip": "^5.19.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
