--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^6.14.2",
     "react-scripts": "^5.0.1",
     "react-tooltip": "^5.19.0",
+    "use-smooth-horizontal-scroll": "^0.7.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
